crates/aivi-core/tests/snapshots/snapshots__snapshot_core_func_module.snap
---
source: crates/aivi-core/tests/snapshots.rs
expression: core.pretty()
---
func add:
  params = [x: Int, y: Int]
  body = #0 Add #1
func __aivi_option_getOrElse:
  params = [fallback: A, opt: Option A]
  body = #3 ||> Some item => #4 ||> None => #2
func __aivi_list_keepSome:
  params = [item: A]
  body = Some #5
func __aivi_list_keepFirst:
  params = [found: Option A, item: A]
  body = #6 T|>[Some] __aivi_list_keepSome _ F|>[None] Some #7
func __aivi_list_lengthStep:
  params = [total: Int, item: A]
  body = #8 Add 1
func __aivi_list_length:
  params = [items: List A]
  body = #10 |> Reduce(List) __aivi_list_lengthStep 0 _
func __aivi_list_head:
  params = [items: List A]
  body = #11 |> Reduce(List) __aivi_list_keepFirst None _
func __aivi_list_tailState:
  params = [items: List A, item: A, seenFirst: Bool]
  body = #14 T|>[True] {seenFirst: True, items: Append(List) #12 [#13]} F|>[False] {seenFirst: True, items: []}
func __aivi_list_tailStep:
  params = [state: { seenFirst: Bool, items: List A }, item: A]
  body = #15 ||> {seenFirst: seenFirst, items: items} => __aivi_list_tailState #18 #16 #17
func __aivi_list_tailItems:
  params = [items: List A, seenFirst: Bool]
  body = #20 T|>[True] Some #19 F|>[False] None
func __aivi_list_tailFromState:
  params = [state: { seenFirst: Bool, items: List A }]
  body = #21 ||> {seenFirst: seenFirst, items: items} => __aivi_list_tailItems #23 #22
func __aivi_list_tail:
  params = [items: List A]
  body = #24 |> Reduce(List) __aivi_list_tailStep {seenFirst: False, items: []} _ |> __aivi_list_tailFromState _
func __aivi_list_anyStep:
  params = [predicate: A -> Bool, found: Bool, item: A]
  body = #26 T|>[True] True F|>[False] #25 #27
func __aivi_list_any:
  params = [predicate: A -> Bool, items: List A]
  body = #29 |> Reduce(List) __aivi_list_anyStep #28 False _
func __aivi_binary_eq:
  params = [left: A, right: A]
  body = #30 Equals #31
func __aivi_binary_neq:
  params = [left: A, right: A]
  body = #32 NotEquals #33
func __aivi_nel_singleton:
  params = [item: A]
  body = NonEmptyList.MkNEL #34 []
func __aivi_nel_cons:
  params = [item: A, nel: NonEmptyList A]
  body = #36 ||> MkNEL h t => NonEmptyList.MkNEL #35 Append(List) [#37] #38
func __aivi_nel_head:
  params = [nel: NonEmptyList A]
  body = #39 ||> MkNEL h ignored => #40
func __aivi_nel_toList:
  params = [nel: NonEmptyList A]
  body = #42 ||> MkNEL h t => Append(List) [#43] #44
func __aivi_nel_fromHeadTail:
  params = [h: A, t: List A]
  body = NonEmptyList.MkNEL #45 #46
func __aivi_nel_lengthStep:
  params = [acc: Int, ignored: A]
  body = #47 Add 1
func __aivi_nel_tailLength:
  params = [t: List A]
  body = #49 |> Reduce(List) __aivi_nel_lengthStep 1 _
func __aivi_nel_length:
  params = [nel: NonEmptyList A]
  body = #50 ||> MkNEL ignored t => __aivi_nel_tailLength #52
func __aivi_nel_initAppendPrev:
  params = [items: List A, prev: Option A]
  body = #54 ||> Some p => Append(List) #53 [#55] ||> None => #53
func __aivi_nel_initAccum:
  params = [items: List A, prev: Option A, item: A]
  body = (__aivi_nel_initAppendPrev #56 #57, Some #58)
func __aivi_nel_initStep:
  params = [state: (List A, Option A), item: A]
  body = #59 ||> (items, prev) => __aivi_nel_initAccum #61 #62 #60
func __aivi_nel_initExtract:
  params = [state: (List A, Option A)]
  body = #63 ||> (items, prev) => #64
func __aivi_nel_init:
  params = [nel: NonEmptyList A]
  body = #66 ||> MkNEL h t => Append(List) [#67] #68 |> Reduce(List) __aivi_nel_initStep ([], None) _ |> __aivi_nel_initExtract _
func __aivi_option_map:
  params = [transform: A -> B, opt: Option A]
  body = #70 ||> Some item => Some #69 #71 ||> None => None
func __aivi_list_containsStep:
  params = [eq: A -> Bool, found: Bool, item: A]
  body = #73 T|>[True] True F|>[False] #72 #74
func __aivi_list_contains:
  params = [eq: A -> A -> Bool, target: A, items: List A]
  body = #77 |> Reduce(List) __aivi_list_containsStep #75 #76 False _
func __aivi_list_mapStep:
  params = [transform: A -> B, acc: List B, item: A]
  body = Append(List) #79 [#78 #80]
func __aivi_list_map:
  params = [transform: A -> B, items: List A]
  body = #82 |> Reduce(List) __aivi_list_mapStep #81 [] _
func __aivi_list_flatMapStep:
  params = [transform: A -> List B, acc: List B, item: A]
  body = Append(List) #84 #83 #85
func __aivi_list_flatMap:
  params = [transform: A -> List B, items: List A]
  body = #87 |> Reduce(List) __aivi_list_flatMapStep #86 [] _
func __aivi_list_filterAppend:
  params = [predicate: A -> Bool, acc: List A, item: A]
  body = #88 #90 T|>[True] Append(List) #89 [#90] F|>[False] #89
func __aivi_list_filter:
  params = [predicate: A -> Bool, items: List A]
  body = #92 |> Reduce(List) __aivi_list_filterAppend #91 [] _
func __aivi_list_countStep:
  params = [predicate: A -> Bool, acc: Int, item: A]
  body = #93 #95 T|>[True] #94 Add 1 F|>[False] #94
func __aivi_list_count:
  params = [predicate: A -> Bool, items: List A]
  body = #97 |> Reduce(List) __aivi_list_countStep #96 0 _
func __aivi_list_sumStep:
  params = [acc: Int, item: Int]
  body = #98 Add #99
func __aivi_list_sum:
  params = [items: List Int]
  body = #100 |> Reduce(List) __aivi_list_sumStep 0 _
func __aivi_list_maxPick:
  params = [gt: A -> A -> Bool, item: A, prev: A]
  body = #101 #102 #103 T|>[True] Some #102 F|>[False] Some #103
func __aivi_list_maximumStep:
  params = [gt: A -> A -> Bool, best: Option A, item: A]
  body = #105 ||> None => Some #106 ||> Some prev => __aivi_list_maxPick #104 #106 #107
func __aivi_list_maximum:
  params = [gt: A -> A -> Bool, items: List A]
  body = #109 |> Reduce(List) __aivi_list_maximumStep #108 None _
func __aivi_list_rangeDesc:
  params = [current: Int, acc: List Int]
  body = #110 LessThan 0 T|>[True] #111 F|>[False] __aivi_list_rangeDesc #110 Subtract 1 Append(List) [#110] #111
func __aivi_list_range:
  params = [n: Int]
  body = #112 LessThanOrEqual 0 T|>[True] [] F|>[False] __aivi_list_rangeDesc #112 Subtract 1 []
func __aivi_text_joinFirst:
  params = [sep: Text, result: Text, item: Text]
  body = (False, #115)
func __aivi_text_joinNext:
  params = [sep: Text, result: Text, item: Text]
  body = (False, Append(Text) Append(Text) #117 #116 #118)
func __aivi_text_joinPick:
  params = [isFirst: Bool, sep: Text, result: Text, item: Text]
  body = #119 T|>[True] __aivi_text_joinFirst #120 #121 #122 F|>[False] __aivi_text_joinNext #120 #121 #122
func __aivi_text_joinStep:
  params = [sep: Text, state: (Bool, Text), item: Text]
  body = #124 ||> (isFirst, result) => __aivi_text_joinPick #126 #123 #127 #125
func __aivi_text_joinExtract:
  params = [state: (Bool, Text)]
  body = #128 ||> (isFirst, result) => #130
func __aivi_text_join:
  params = [sep: Text, items: List Text]
  body = #132 |> Reduce(List) __aivi_text_joinStep #131 (True, "") _ |> __aivi_text_joinExtract _
func __aivi_matrix_rows:
  params = [matrix: Matrix A]
  body = #133 ||> MkMatrix w h data => #136
func __aivi_matrix_width:
  params = [matrix: Matrix A]
  body = #137 ||> MkMatrix w h data => #138
func __aivi_matrix_height:
  params = [matrix: Matrix A]
  body = #141 ||> MkMatrix w h data => #143
func __aivi_listAt_match:
  params = [matches: Bool, idx: Int, item: A]
  body = #145 T|>[True] (#146 Add 1, Some #147) F|>[False] (#146 Add 1, None)
func __aivi_listAt_check:
  params = [target: Int, idx: Int, found: Option A, item: A]
  body = #150 ||> Some already => (#149 Add 1, Some #152) ||> None => __aivi_listAt_match #149 Equals #148 #149 #151
func __aivi_listAt_step:
  params = [target: Int, state: (Int, Option A), item: A]
  body = #154 ||> (idx, found) => __aivi_listAt_check #153 #156 #157 #155
func __aivi_listAt_extract:
  params = [state: (Int, Option A)]
  body = #158 ||> (idx, found) => #160
func __aivi_listAt:
  params = [target: Int, items: List A]
  body = #162 |> Reduce(List) __aivi_listAt_step #161 (0, None) _ |> __aivi_listAt_extract _
func __aivi_matrix_atRow:
  params = [rowOpt: Option List A, x: Int]
  body = #163 ||> Some row => __aivi_listAt #164 #165 ||> None => None
func __aivi_matrix_at:
  params = [matrix: Matrix A, x: Int, y: Int]
  body = #166 ||> MkMatrix w h data => __aivi_matrix_atRow __aivi_listAt #168 #171 #167
func __aivi_listReplace_pick:
  params = [matches: Bool, newVal: A, result: List A, item: A]
  body = #172 T|>[True] (1, Append(List) #174 [#173]) F|>[False] (1, Append(List) #174 [#175])
func __aivi_listReplace_check:
  params = [target: Int, newVal: A, idx: Int, result: List A, item: A]
  body = __aivi_listReplace_pick #178 Equals #176 #177 #179 #180
func __aivi_listReplace_step:
  params = [target: Int, newVal: A, state: (Int, List A), item: A]
  body = #183 ||> (idx, result) => __aivi_listReplace_check #181 #182 #185 #186 #184
func __aivi_listReplace_extract:
  params = [state: (Int, List A)]
  body = #187 ||> (idx, result) => #189
func __aivi_listReplace:
  params = [target: Int, newVal: A, items: List A]
  body = #192 |> Reduce(List) __aivi_listReplace_step #190 #191 (0, []) _ |> __aivi_listReplace_extract _
func __aivi_matrix_doReplace:
  params = [x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = __aivi_listAt #194 #197 ||> Some row => Some Matrix.MkMatrix #195 #196 __aivi_listReplace #194 __aivi_listReplace #193 #198 #199 #197 ||> None => None
func __aivi_matrix_boundsCheck:
  params = [xOk: Bool, yOk: Bool, xLt: Bool, yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #200 T|>[True] __aivi_matrix_boundsCheck2 #201 #202 #203 #204 #205 #206 #207 #208 #209 F|>[False] None
func __aivi_matrix_boundsCheck2:
  params = [yOk: Bool, xLt: Bool, yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #210 T|>[True] __aivi_matrix_boundsCheck3 #211 #212 #213 #214 #215 #216 #217 #218 F|>[False] None
func __aivi_matrix_boundsCheck3:
  params = [xLt: Bool, yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #219 T|>[True] __aivi_matrix_boundsCheck4 #220 #221 #222 #223 #224 #225 #226 F|>[False] None
func __aivi_matrix_boundsCheck4:
  params = [yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #227 T|>[True] __aivi_matrix_doReplace #228 #229 #230 #231 #232 #233 F|>[False] None
func __aivi_matrix_replaceCoord:
  params = [matrix: Matrix A, x: Int, y: Int, value: A]
  body = #234 ||> MkMatrix w h data => __aivi_matrix_boundsCheck #235 GreaterThanOrEqual 0 #236 GreaterThanOrEqual 0 #235 LessThan #238 #236 LessThan #239 #235 #236 #238 #239 #240 #237
func __aivi_matrix_replaceAt:
  params = [matrix: Matrix A, coord: (Int, Int), value: A]
  body = #242 ||> (x, y) => __aivi_matrix_replaceCoord #241 #244 #245 #243
func __aivi_matrix_validateFirstRow:
  params = [rowIdx: Int, expectedWidth: Int, row: List A]
  body = (1, __aivi_list_length #248, None)
func __aivi_matrix_validateLengthMatch:
  params = [matches: Bool, rowIdx: Int, expectedWidth: Int, row: List A]
  body = #249 T|>[True] (#250 Add 1, #251, None) F|>[False] (#250 Add 1, #251, Some MatrixError.RaggedRows #250 #251 __aivi_list_length #252)
func __aivi_matrix_validateSubsequentRow:
  params = [isFirst: Bool, rowIdx: Int, expectedWidth: Int, row: List A]
  body = #253 T|>[True] __aivi_matrix_validateFirstRow #254 #255 #256 F|>[False] __aivi_matrix_validateLengthMatch __aivi_list_length #256 Equals #255 #254 #255 #256
func __aivi_matrix_validateRow:
  params = [prevError: Option MatrixError, rowIdx: Int, expectedWidth: Int, row: List A]
  body = #257 ||> Some e => (#258 Add 1, #259, Some #261) ||> None => __aivi_matrix_validateSubsequentRow #258 Equals 0 #258 #259 #260
func __aivi_matrix_fromRowsStep:
  params = [state: (Int, Int, Option MatrixError), row: List A]
  body = #262 ||> (rowIdx, width, error) => __aivi_matrix_validateRow #266 #264 #265 #263
func __aivi_matrix_fromRowsDecide:
  params = [error: Option MatrixError, rowCount: Int, width: Int, inputRows: List List A]
  body = #267 ||> Some e => Err #271 ||> None => Ok Matrix.MkMatrix #269 #268 #270
func __aivi_matrix_fromRowsFinish:
  params = [inputRows: List List A, state: (Int, Int, Option MatrixError)]
  body = #273 ||> (rowCount, width, error) => __aivi_matrix_fromRowsDecide #276 #274 #275 #272
func __aivi_matrix_fromRows:
  params = [inputRows: List List A]
  body = #277 |> Reduce(List) __aivi_matrix_fromRowsStep (0, 0, None) _ |> __aivi_matrix_fromRowsFinish #277 _
